# music-analyzer-server

./: .gitattributes  CMakeLists.txt  Dockerfile  README.md  build-docker.sh  main.cpp  use-cookies.sh
config/: wt_config.xml  wt_config_release.xml
resources/pages/: main-layout.xml  processing.xml
resources/style/: main-content.css
src/application/: MusicApplication.hpp  lambda_resource.cpp  lambda_resource.hpp  session.cpp  session.hpp  user.cpp  user.hpp
src/components/: file_view.cpp  file_view.hpp  process_log.cpp  process_log.hpp  song_view.cpp  song_view.hpp  todo_item_view.cpp  todo_item_view.hpp  todo_view.cpp  todo_view.hpp
src/models/: audio.hpp  user_details.cpp  user_details.hpp
src/pages/: authentication_page.cpp  authentication_page.hpp  processing_page.cpp  processing_page.hpp  registration_view.cpp  registration_view.hpp
src/services/: audio_features_service.cpp  audio_features_service.hpp  cookie_info.cpp  cookie_info.hpp  load_balancer.cpp  load_balancer.hpp
